# crawl-mcp

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_ja.md  claude_desktop_config.json  claude_desktop_config_script.json  claude_desktop_config_windows.json  commit_message.txt  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  setup.sh  setup_windows.bat  troubleshooting_ja.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/chat_history/: 22-sep-2025-imported-session.md  22-sep-2025-macos.md
.github/workflows/: ghcr-publish.yml  pr-preview.yml  release.yml  sync-upstream.yml  test.yml
configs/: claude_desktop_config.json  claude_desktop_config_pure_http.json  default_config.json
crawl4ai_mcp/: __init__.py  config.py  constants.py  file_processor.py  google_search_processor.py  server.py  server_helpers.py  strategies.py  validators.py  youtube_processor.py
crawl4ai_mcp/core/: __init__.py  batch.py  crawl_url.py  crawler_core.py  crawler_fallback.py  crawler_io.py  crawler_summarizer.py  extraction_entity.py  extraction_intelligent.py  extraction_structured.py  file_chunking.py  file_large_content.py  file_processing.py  search.py  search_crawl.py  tool_guides.py  youtube.py  youtube_comments.py  youtube_helpers.py
crawl4ai_mcp/infra/: __init__.py  browser.py  content_cache_policy.py  content_processors.py  diagnostics.py  fallback_strategies.py  fingerprint.py  strategy_cache.py
crawl4ai_mcp/middleware/: __init__.py  cache.py  (+9 more)
docs/: ADVANCED_USAGE.md  API_REFERENCE.md  CHANGELOG.md  CONFIGURATION_EXAMPLES.md  DEVELOPMENT.md  HTTP_API_GUIDE.md  HTTP_INTEGRATION.md  HTTP_SERVER_USAGE.md  INSTALLATION.md  PURE_STREAMABLE_HTTP.md  YOUTUBE_SETUP_2025.md  setup_instructions_ja.md
dxt-packages/: DXT_CREATION_GUIDE.md  DXT_TROUBLESHOOTING_GUIDE.md  FINAL_RELEASE_NOTES.md  README_DXT_PACKAGES.md
examples/: pure_streamable_http_server.py  run_http_server.py  simple_pure_http_server.py
scripts/: detect_playwright_chromium_version.py  prepare_for_uvx_playwright.bat  prepare_for_uvx_playwright.ps1  prepare_for_uvx_playwright.sh  run_http_server.sh  run_tests.sh  start_pure_http_server.sh
tests/: README.md  __init__.py  conftest.py  test_smoke.py
(+89 files in other folders)
